--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     font-family:'Lexend Deca', sans-serif;
     /* background: linear-gradient(to bottom, #0ab0f6, #02359a); */
-    background-image: url('/testbg2.png');
+    background-image: url('/public/testbg2.png');
     /* Adjust background properties as needed */
     background-size: cover;
     background-position: center;
