--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -13,6 +13,7 @@ body {
     align-items: flex-start;
     height: 100vh;
     overflow-x: hidden;
+    overflow-y: hidden;
     justify-content: center; /* Center the content horizontally */
   }
   
@@ -32,23 +33,29 @@ body {
   
   .calendar-title {
     color: white;
-    margin-top: -2rem;
     font-size: 1.8rem;
+    margin-top: -2%;
+    
   }
   .calendar-container {
     flex: 5; /* Adjust the flex property to control the width of the calendar */
     border: 1px solid black;
-    height: 600px;
+    height: 66%;
     overflow: hidden;
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     border: 4px solid rgb(177, 171, 171);
     border-radius: 13px;
-    width: 60rem;
+    width: 95%;
+    margin-left: 1%;
+    
   }
 
   .RightSideScreen {
     margin-top: 3rem;
     margin-right: 1rem;
+    width: 70%;
+    height: 120%;
+
   }
   
   .appt-list {
@@ -145,10 +152,11 @@ body {
   }
 
   .create-appt {
-    margin-top: 1rem;
+    margin-top: .5rem;
     margin-left: 0rem;
     width: 30rem;
     font-size: 1.25rem;
+
   }
 
   .create-appt:hover {
@@ -156,14 +164,14 @@ body {
   }
 
   .sign-out-button {
-    display: flex;
-    align-items: center;
     justify-content: center;
-    padding: 20px;
+    align-items: center;
     font-size: 15px;
-    margin-left: 54rem;
-    left: 5px;
-    margin-top: -2rem;
+    padding: 20px;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 10rem;
   
   }
   
