--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -66,7 +66,10 @@ body {
   .side-menu {
     background-color: #f1f1f1;
     padding: 20px;
-    
+    display: flex; /* Use flexbox to align its children */
+    flex-direction: column; /* Stack its children vertically */
+    align-items: center; 
+    flex-grow: 1;
   }
   
   .appt-item {
@@ -76,15 +79,14 @@ body {
   
   .appt-item-box {
     background-color: #fff;
-    padding: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 25px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    padding: 20px;
+    border-radius: .5rem;
     margin-left: -2.5rem;
+    margin-right: 2.5rem;
     text-align: center;
     white-space: nowrap; /* Prevent text wrapping */
+    width: 100%;
   }
   
   .appt-item-title {
@@ -109,7 +111,9 @@ body {
     border-radius: 4px;
     margin-bottom: 2rem;
     border-radius: 10px;
+    width: 90%;
   }
+
 
   .sideHeader {
     margin-bottom: 2rem;
@@ -322,10 +326,8 @@ body {
     width: 15rem;
     border-radius: 10px;
     font-weight: bolder;
-    margin-right: -2rem;
-    position: absolute;
     bottom:10px;
-    margin-left: 1rem;
+    position: absolute;
   }
 
   .max-appt-wrapper {
