--- a/src/App.css
+++ b/src/App.css
@@ -71,11 +71,15 @@
 .login-form {
   width: 70%;
   margin-left: 15%;
+  display: flex;
+
+  /* flex-direction: column; */ 
 }
 
 .register-form {
   width: 70%;
   margin-left: 15%;
+  display: block;
 }
 
 
@@ -359,10 +363,10 @@ button:hover {
 .error {
   font-size: 17.5px;
   font-family: 'Times New Roman', Times, serif;
-  margin-left: 3rem;
   color: rgb(235, 69, 69);
   font-weight: bold;
   max-width: 15rem;
+  align-self: center;
 }
 
 .link-to-creation {
@@ -382,6 +386,16 @@ button:hover {
   margin-left: 0rem;
   color: rgb(235, 69, 69);
   font-weight: bold;
+  align-self: center;
+}
+.error5 {
+  font-size: 17.5px;
+  font-family: 'Times New Roman', Times, serif;
+  color: rgb(235, 69, 69);
+  font-weight: bold;
+  max-width: 15rem;
+  align-self: center;
+  padding-left: 15%;
 }
 
 .User-CC-error {
@@ -464,3 +478,6 @@ button:hover {
   margin-left: 25%;
 }
 
+.register-button {
+  width: 70%;
+}
